--- a/css/style.css
+++ b/css/style.css
@@ -9798,3 +9798,8 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+/*=================================================================================================================*/
+.logosize{
+  width: 90px;       
+  height: auto; 
+}
