--- a/css/style.css
+++ b/css/style.css
@@ -9803,3 +9803,8 @@ textarea.form-control {
   width: 90px;       
   height: auto; 
 }
+
+.newmap{
+  width: 1100px;       
+  height: 700px;  
+}
