--- a/css/style.css
+++ b/css/style.css
@@ -8828,17 +8828,17 @@ textarea.form-control {
   font-size: 24px; }
 
 .ftco-section {
-  padding: 7em 0;
+  padding: 12em 0;
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
-      padding: 6em 0; } }
+      padding: 10em 0; } }
 
 .ftco-bg-dark {
   background: #3c312e; }
 
 .ftco-no-pt {
-  padding-top: 0 !important; }
+  padding-top: 150px !important; }
 
 .ftco-no-pb {
   padding-bottom: 0 !important; }
