--- a/css/style.css
+++ b/css/style.css
@@ -9808,3 +9808,29 @@ textarea.form-control {
   width: 1100px;       
   height: 700px;  
 }
+/*video*/
+/*
+#headerPopup{
+  width:75%;
+  margin:0 auto;
+}
+
+#headerPopup iframe{
+  width:100%;
+  margin:0 auto;
+}
+*/
+
+
+/* CSS Document */
+/*#headerPopup{
+  width:75%;
+  margin:0 auto;
+}
+
+#headerPopup iframe{
+  width:100%;
+  margin:0 auto;
+}
+
+*/
