--- a/css/style.css
+++ b/css/style.css
@@ -9806,7 +9806,8 @@ textarea.form-control {
 
 .newmap{
   width: 1100px;       
-  height: 700px;  
+  height: 700px; 
+  border-radius: 20px; 
 }
 /*video*/
 /*
@@ -9834,3 +9835,9 @@ textarea.form-control {
 }
 
 */
+
+
+
+
+
+
