--- a/css/registerstyle.css
+++ b/css/registerstyle.css
@@ -9,7 +9,7 @@
 
 body,
 html {
-  height: 100%;
+  /*height: 100%;*/
   font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
